changed css bg image to cover and correct home page align

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -9,6 +9,7 @@
 	width: 100vw;
 	height: 650px;
 	background: image-url("home-top.jpg");
+	background-size: cover;
 }
 
 .home-top-color-overlay {
@@ -64,6 +65,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 }
 
 .home-top-content p {
